crates/lingui_macro/tests/snapshots/labeled_expressions__js_ph_with_non_object_arg.snap
---
source: crates/lingui_macro/tests/js_t.rs
info: {}
---
import { t, ph } from "@lingui/core/macro";
t`Refresh ${ph(variable)} inbox`

Ōåō Ōåō Ōåō Ōåō Ōåō Ōåō

error: Incorrect usage of `ph` macro. First argument should be an object expression like `ph({name: value})`.
 --> input.tsx:2:16
  |
2 | t`Refresh ${ph(variable)} inbox`
  |                ^^^^^^^^
